Complete Udacity Project Tasks
- Finished all the tasks required of the project.
- Used SKLearn model to train and predict the model.

--- a/2_Plagiarism_Feature_Engineering.ipynb
+++ b/2_Plagiarism_Feature_Engineering.ipynb
@@ -2064,7 +2064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** I chose two containment features that were least correlated with each other and the lcs feature. Furthermore, understanding the mechanics of the containment method, I believe the model will preform well with a total of three containment feature, however, I can only be sure of it after experimenting with the values. Hence, currently, above is the best combination considering the correlation values.\n"
+    "**Answer:** I chose two containment features that were least correlated with each other and the lcs feature. Furthermore, understanding the mechanics of the containment method, I believe the model will preform well with a total of three containment feature, however, I can only be sure of it after experimenting with the values. Hence, currently, the above selection is the best combination considering the correlation values.\n"
    ]
   },
   {
